@@ -25,6 +25,7 @@
  * Added a DRX8 reader for future data format support
  * Updated gatherDebugging.py to make it more useful
  * Dropped the 'indicies' keyword from lsl.correlator.uvutils
+ * Added support for the (experimental) GloTEC ionosphere model
 
 2.2.0
  * Add a keyword to lsl.imaging.selfcal functions that will return whether or not a call converged
